cif/org.eclipse.escet.cif.tests/tests/checks/EdgeNoUrgentCheck.cif.check.err
ERROR: CIF checks tester failed due to unsatisfied preconditions:

  ---------------------
  (1/1) Edge is urgent.
  ---------------------
   * In location "a.l2":
     - edge e now goto l3;
       ^
   * In location "a.l4":
     - edge e now goto l1;
       ^
   * In location "g.A.l2":
     - edge e now goto l3;
       ^
   * In location "g.A.l4":
     - edge e now goto l1;
       ^
